# onee

./: .gitignore  Long-Term Forecasting Configuration Guide.md  README.md  STF_STRATEGIES_REWRITE.md  Short-Term Forecasting Configuration Guide.md  adjustment.py  apply_adjustment.py  forcast_strategies.py  forcast_strategies_draft.py  forecast_strategies.py  full_forecast_utils.py  growth_rate_model.py  horizon_forecast_strategies.py  long_term_forecast_strategies.py  ltf_srm.csv  new_entities_handlers.py  pyproject.toml  run_cd.py  run_forcast_cd.py  run_forcast_cd_draft.py  run_forcast_srm.py  run_forecast_cd.py  run_forecast_srm.py  run_full_cd.py  run_full_srm.py  run_horizon_forecast_cd.py  run_horizon_forecast_srm.py  run_ltf_cd.py  run_ltf_srm.py  run_srm.py  run_stf_cd.py  run_stf_srm.py  short_term_forecast_strategies.py  stf_srm.csv  temp.py  test.py
adjustment/: adjustment.py
configs/: ltf_cd.yaml  ltf_srm.yaml  stf_cd.yaml  stf_srm.yaml
guides/: Long-Term Forecasting Configuration Guide.md  System Overview & Architecture Guide.md
nbr_clients/: all_results_Béni_Mellal-Khénifra_nbr_clients.pkl  all_results_Casablanca-Settat_nbr_clients.pkl  all_results_Drâa-Tafilalet_nbr_clients.pkl  all_results_Fès-Meknès_nbr_clients.pkl  all_results_Laâyoune-Sakia_El_Hamra_nbr_clients.pkl  all_results_Marrakech-Safi_nbr_clients.pkl  all_results_Oriental_nbr_clients.pkl  all_results_Rabat-Salé-Kénitra_nbr_clients.pkl  all_results_Souss-Massa_nbr_clients.pkl  all_results_Tanger-Tétouan-Al_Hoceïma_nbr_clients.pkl
notebooks/: 4.2.0  analyse.ipynb  analyse_10.ipynb  (+25 more)
(+56 files in other folders)
